--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,23 +1,39 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500&family=SUSE:wght@100..800&display=swap');
 
+:root {
+    --primary: '#fe2c55';
+    //DefaultLayout
+    --default-layout-header-height :60px;
+    --default-layout-width:1150px;
+    --black:#000;
+    --text-color:#333;
 
-:root{
-    --primary:'#fe2c55'
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-html{
-    font-size:62,5%;
+html {
+    font-size: 62, 5%;
+}
+
+body {
+    font-size: 1.6rem;
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.5;
+    text-rendering: optimizeSpeed;
 }
 
 
-body{
-    font-size:1.6rem;
-    font-family: "Roboto", sans-serif;
-    line-height: 1.5;
-    text-rendering:optimizeSpeed;
+button ,input ,[tabindex]{
+    outline: none;
+    border:none;
+}
+a[href]{
+    color:var(--text-color);
+    text-decoration: none;
 }
